[metadata]
name = pyphotonics
version = 0.0.1
author = Rohan Kumar
author_email = rohankumar@berkeley.edu
description = A library for automated photonic circuit design
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rohanku/pyphotonics
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
  gdstk

python_requires = >=3.7

[options.packages.find]
where = src
